# TestNavLibOsmScout

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Merken.txt  README.md
TestNavLibOsmScout/: CMakeLists.txt  ConsoleRoutingProgress.cpp  ConsoleRoutingProgress.h  IPathGenerator.h  NMEADecoder.cpp  NMEADecoder.h  NavigationDescription.cpp  NavigationDescription.h  PathGenerator.cpp  PathGenerator.h  PathGeneratorNMEA.cpp  PathGeneratorNMEA.h  Simulator.cpp  Simulator.h  TestNavLibOsmScout.cpp  TestNavLibOsmScout.h
TestNavLibOsmScout/notWork/: TestNavLibOsmScout.cpp  TestNavLibOsmScout.h
cmake/: FindOSMScout.cmake
